example-app-with-kubernetes/k8s/fe-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fe
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: fe
    spec:
      imagePullSecrets:
      - name: my-registry
      containers:
      - name: name
        imagePullPolicy: Always
        image: my-registry/cool-project/fe
        readinessProbe:
          httpGet:
            path: /
            port: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
        resources:
          limits:
            cpu: '1'
            memory: 1024Mi
          requests:
            cpu: '0.1'
            memory: 256Mi
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
