example-app-with-kubernetes/k8s/be-service.yml
kind: Service
apiVersion: v1
metadata:
  name: be
spec:
  selector:
    app: be
  ports:
  - name: http
    port: 80
    targetPort: 80
