example-app-with-kubernetes/k8s/fe-service.yml
kind: Service
apiVersion: v1
metadata:
  name: fe
spec:
  selector:
    app: fe
  ports:
  - name: http
    port: 80
    targetPort: 80
